# pinkle-fastapi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/versions/: 0443ea739f24_fixing.py  326730f8371c_add_comments_and_other_columns.py  687a4127ce2b_add_id_to_comments.py  79e681ae0b54_remove_author_id_from_post_and_instead_.py  7a036930b60c_add_content_column_to_post.py  e04e93844f08_remove_pk_from_comments.py
app/: config.py  database.py  graphql_config.py  main.py  models.py  oauth2.py  scarlars.py  schema.gql  utils.py
app/auth/: routers.py  schemas.py
app/core/: graphql_config.py  scarlars.py
app/db/: database.py
app/post/: models.py  resolvers.py  schema.graphql
app/resolvers/: auth.py  post.py  user.py
app/routers/: auth.py  oauth2.py  schemas.py
app/shared/: schema.graphql
app/user/: models.py  resolvers.py  schema.graphql
