[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Chuks Grinage <chuksgrinage.dev@gmail.com>"]

[tool.poetry.scripts]
dev = "app.main:dev"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.70.1"}
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
pydantic = "^1.8.2"
ariadne = "^0.14.0"
jwt = "^1.3.1"
fastapi-jwt-auth = "^0.5.0"


[tool.poetry.dev-dependencies]
alembic = "1.7.5"
black = "21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
